--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,34 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="Кухня здорового питания в Житомире">
+	<meta name="keywords" content="healthykitchen, healthy kitchen, Житомир, правильное питание, пп, бжу, доставка, еда, здоровое питание, на дом,">
 	<title>Healthy Kitchen</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
 	<link rel="stylesheet" href="build/styles.css">
 </head>
 <body>
-	<div id="app"></div>
+	<div id="app">
+		<h1 class='d-none'>Здоровое питание каждый день</h1>
+		<address class='d-none'>
+			<p><strong>Город:</strong> Житомир</p>
+			<p><strong>Email:</strong> healthykitchen.zt@gmail.com</p>
+			<p><strong>Тел:</strong> +38(067) 404 1 303</p>
+		</address>
+	</div>
 	<script src="build/bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-101337444-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-101337444-2');
+	</script>
 </body>
 </html>
